<resources>
    <string name="app_name">بازاریاب</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">تنظیمات</string>
    <string name="hint_username">نام کاربری</string>
    <string name="hint_password">رمز عبور</string>
    <string name="hint_ssn">کد ملی</string>
    <string name="hint_mobile">موبایل</string>
    <string name="hint_email">ایمیل</string>
    <string name="login">ورود</string>
    <string name="register">ثبت نام</string>
    <string name="hint_register">حساب کاربری ندارید؟</string>
    <string name="hint_login">قبلا ثبت نام کرده اید؟</string>
    <string name="password_forgot">رمز عبور خود را فراموش کرده اید؟</string>
    <string name="error_null_username">نام کاربری را وارد کنید</string>
    <string name="error_null_password">رمز عبور را وارد کنید</string>
    <string name="null_context_error">null context error</string>
    <string name="status_check_message">Hooorrrriiiiiiii!!!!!</string>
    <string name="error_regex_email">ایمیل معتبر نیست</string>
    <string name="error_null_ssn">کد ملی خود را وارد کنید</string>
    <string name="error_regex_ssn">کد ملی معتبر نیست</string>
    <string name="error_regex_username">فقط حروف فارسی و انگلیسی و عدد معتبر است</string>
    <string name="error_null_phone">موبایل خود را وارد نمایید</string>
    <string name="error_regex_phone">موبایل معتبر نیست</string>
    <string name="logoTransitionName">logoTransitionName</string>
    <string name="label_request_no">شماره درخواست :</string>
    <string name="label_state">استان :</string>
    <string name="label_ssn">کد ملی :</string>
    <string name="label_request_owner">نام درخواست دهنده :</string>
    <string name="label_last_acceptance_date">تایید مرحله قبل :</string>
    <string name="label_nurse">پرستار :</string>
    <string name="label_btn_send">ارسال</string>
    <string name="label_btn_cancel">لغو</string>
    <string name="label_empty_item">نامشخص</string>
    <string name="lable_request_list">درخواست ها</string>
    <string name="cancel_request">درخواست لغو شود؟</string>
    <string name="yes_message">بله</string>
    <string name="no_message">خیر</string>
    <string name="hint_host_name">نام</string>
    <string name="hint_host_phone">تلفن پذیرنده</string>
    <string name="hint_host_info">مشخصات پذیرنده</string>
    <string name="hint_request_location_info">مشخصات جایگاه</string>
    <string name="hint_address">آدرس</string>
    <string name="hint_zip_code">کدپستی</string>
    <string name="hint_location_name">نام محل</string>
    <string name="hint_request_addiyional_info">اطلاعات تکمیلی</string>
    <string name="hint_activity_type">انتخاب نوع فعالیت</string>
    <string name="hint_ownership_type">انتخاب نوع مالکیت</string>
    <string name="hint_description">توضیحات</string>
    <string name="hint_state">انتخاب استان</string>
    <string name="hint_city">انتخاب شهر</string>
    <string name="hint_btn_add">افزودن</string>
    <string name="hint_search">جستجو</string>
</resources>
