<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="request"
            type="com.parsa.marketer.database.model.Request" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_bg_color"
        android:orientation="vertical"
        android:weightSum="1">

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".9">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="right"
                android:layout_weight="3"
                android:gravity="right|center_vertical"
                android:orientation="vertical">

                <TextView
                    style="@style/StyleTextHeader"
                    android:text="@string/hint_host_info" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_host_name"
                    style="@style/Style.Text.Input.Layout">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_hose_name"
                        style="@style/Style.Edit.Text"
                        android:hint="@string/hint_host_name"
                        android:inputType="text"
                        android:maxLength="50"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/til_host_phone"
                        style="@style/Style.Text.Input.Layout"
                        android:layout_width="0dp"
                        android:layout_marginRight="@dimen/margin_4"
                        android:layout_weight="1">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/et_host_phone"
                            style="@style/Style.Edit.Text"
                            android:hint="@string/hint_mobile"
                            android:inputType="number"
                            android:maxLength="11"
                            android:maxLines="1" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/til_host_ssn"
                        style="@style/Style.Text.Input.Layout"
                        android:layout_width="0dp"
                        android:layout_marginLeft="@dimen/margin_4"
                        android:layout_weight="1">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/et_host_ssn"
                            style="@style/Style.Edit.Text"
                            android:hint="@string/hint_ssn"
                            android:inputType="number"
                            android:maxLength="10"
                            android:maxLines="1" />

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <TextView
                    style="@style/StyleTextHeader"
                    android:text="@string/hint_request_location_info" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_32"
                    android:layout_marginRight="@dimen/margin_32"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <customwidget.CustomSpinner
                        android:id="@+id/spinner_city"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/margin_8"
                        android:layout_weight="1"
                        app:hint="@string/hint_city" />

                    <customwidget.CustomSpinner
                        android:id="@+id/spinner_state"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_8"
                        android:layout_weight="1"
                        app:hint="@string/hint_state" />


                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_address"
                    style="@style/Style.Text.Input.Layout">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_address"
                        style="@style/Style.Edit.Text"
                        android:hint="@string/hint_address"
                        android:inputType="text"
                        android:maxLength="100"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/til_zip_code"
                        style="@style/Style.Text.Input.Layout"
                        android:layout_width="0dp"
                        android:layout_marginRight="@dimen/margin_4"
                        android:layout_weight="1">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/et_zip_code"
                            style="@style/Style.Edit.Text"
                            android:hint="@string/hint_zip_code"
                            android:inputType="number"
                            android:maxLength="15"
                            android:maxLines="1" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/til_location_name"
                        style="@style/Style.Text.Input.Layout"
                        android:layout_width="0dp"
                        android:layout_marginLeft="@dimen/margin_4"
                        android:layout_weight="1">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/et_location_name"
                            style="@style/Style.Edit.Text"
                            android:hint="@string/hint_location_name"
                            android:inputType="text"
                            android:maxLength="30"
                            android:maxLines="1" />

                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_32"
                    android:background="@drawable/bg_icon_oval_gray"
                    android:visibility="gone"/>

                <TextView
                    style="@style/StyleTextHeader"
                    android:text="@string/hint_request_addiyional_info" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin_32"
                    android:layout_marginRight="@dimen/margin_32"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <customwidget.CustomSpinner
                        android:id="@+id/spinner_ownership_type"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="@dimen/margin_8"
                        android:layout_weight="1"
                        app:hint="@string/hint_activity_type" />

                    <customwidget.CustomSpinner
                        android:id="@+id/spinner_activity_type"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_8"
                        android:layout_weight="1"
                        app:hint="@string/hint_activity_type" />


                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_description"
                    style="@style/Style.Text.Input.Layout">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_description"
                        style="@style/Style.Edit.Text"
                        android:hint="@string/hint_description"
                        android:inputType="text"
                        android:maxLength="100"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>


            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

        <Button
            android:id="@+id/btn_add_new_request"
            style="@style/Style.Big.Button"
            android:layout_weight=".01"
            android:text="@string/hint_btn_add" />

    </LinearLayout>

</layout>
