<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="user"
            type="com.parsa.marketer.database.model.User" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_bg_color"
        android:orientation="vertical"
        android:weightSum="6">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/margin_32"
            android:layout_marginTop="@dimen/margin_32"
            android:layout_weight="1"
            android:gravity="right">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="@dimen/image_register"
                android:layout_height="@dimen/image_register"
                android:layout_gravity="center|top"
                android:background="@mipmap/ic_launcher_round"
                android:transitionName="@string/logoTransitionName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="right"
            android:layout_weight="3"
            android:gravity="right|center_vertical"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_username"
                style="@style/Style.Text.Input.Layout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_username"
                    style="@style/Style.Edit.Text"
                    android:drawableEnd="@drawable/ic_account_circle_gray"
                    android:drawablePadding="@dimen/margin_8"
                    android:drawableRight="@drawable/ic_account_circle_gray"
                    android:hint="@string/hint_username"
                    android:inputType="text"
                    android:maxLength="20"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_password"
                style="@style/Style.Text.Input.Layout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_password"
                    style="@style/Style.Edit.Text"
                    android:drawableEnd="@drawable/ic_lock_gray"
                    android:drawablePadding="@dimen/margin_8"
                    android:drawableRight="@drawable/ic_lock_gray"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_phone"
                    style="@style/Style.Text.Input.Layout"
                    android:layout_width="0dp"
                    android:layout_marginRight="@dimen/margin_4"
                    android:layout_weight="1">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_phone"
                        style="@style/Style.Edit.Text"
                        android:drawableEnd="@drawable/ic_call_gray"
                        android:drawablePadding="@dimen/margin_8"
                        android:drawableRight="@drawable/ic_call_gray"
                        android:hint="@string/hint_mobile"
                        android:inputType="number"
                        android:maxLength="11"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_ssn"
                    style="@style/Style.Text.Input.Layout"
                    android:layout_width="0dp"
                    android:layout_marginLeft="@dimen/margin_4"
                    android:layout_weight="1">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/et_ssn"
                        style="@style/Style.Edit.Text"
                        android:drawableEnd="@drawable/ic_account_circle_gray"
                        android:drawablePadding="@dimen/margin_8"
                        android:drawableRight="@drawable/ic_account_circle_gray"
                        android:hint="@string/hint_ssn"
                        android:inputType="number"
                        android:maxLength="10"
                        android:maxLines="1" />

                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_email"
                style="@style/Style.Text.Input.Layout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_email"
                    style="@style/Style.Edit.Text"
                    android:drawableEnd="@drawable/ic_lock_gray"
                    android:drawablePadding="@dimen/margin_8"
                    android:drawableRight="@drawable/ic_lock_gray"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:maxLength="50"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="bottom"
            android:layout_weight="2"
            android:gravity="bottom"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_register"
                style="@style/Style.Big.Button"
                android:text="@string/register" />

            <LinearLayout
                android:id="@+id/container_btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_32"
                android:layout_marginLeft="@dimen/margin_32"
                android:layout_marginRight="@dimen/margin_32"
                android:gravity="right"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin_8"
                    android:gravity="right"
                    android:text="@string/login"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/text_size_header"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:gravity="center"
                    android:text="@string/hint_login"
                    android:textColor="@color/text"
                    android:textSize="@dimen/text_size_title" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</layout>
